--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@types/d3-array": "^3.2.1",
+		"@types/d3-interpolate": "^3.0.4",
+		"@types/d3-scale": "^4.0.9",
+		"@types/d3-shape": "^3.1.7",
+		"d3-array": "^3.2.4",
+		"d3-interpolate": "^3.0.1",
+		"d3-scale": "^4.0.2",
+		"d3-shape": "^3.2.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-motion": "^0.0.1",
 		"tailwindcss-motion": "^1.1.1"
