--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"prisma": {
+		"schema": "prisma/schema.prisma"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"postinstall": "prisma generate",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -18,6 +22,9 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.10",
+		"prisma": "^6.10.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
@@ -25,14 +32,17 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.10.0",
 		"@types/d3-array": "^3.2.1",
 		"@types/d3-interpolate": "^3.0.4",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
+		"bcrypt": "^6.0.0",
 		"d3-array": "^3.2.4",
 		"d3-interpolate": "^3.0.1",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
+		"jsonwebtoken": "^9.0.2",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-motion": "^0.0.1",
 		"tailwindcss-motion": "^1.1.1"
