--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@types/ssh2": "^1.15.5",
 		"prisma": "^6.10.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -43,6 +44,8 @@
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
 		"jsonwebtoken": "^9.0.2",
+		"ssh2": "^1.16.0",
+		"ssh2-sftp-client": "^12.0.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-motion": "^0.0.1",
 		"tailwindcss-motion": "^1.1.1"
