--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.10.0",
+		"@types/d3": "^7.4.3",
 		"@types/d3-array": "^3.2.1",
 		"@types/d3-interpolate": "^3.0.4",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
 		"bcrypt": "^6.0.0",
+		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
 		"d3-interpolate": "^3.0.1",
 		"d3-scale": "^4.0.2",
